Improve search parallellization.
The most important goal was to run all operation on one segment
in one thread, including hit fetching, filtering and grouping.

HitFetcher/HitCollector was replaced with HitPublisher/HitSubscriber,
making hit processing asynchronous. Each subscriber can indicate whether
or not it needs more hits. The publisher will keep fetching and
publishing hits as long any of its subscribers ask for more.

Everything starts from HitPublisherSpans, which will retrieve hits from
a Spans object and publish them to its subscribers in batches.
Subscribers might be HitsFromPublishers (creates a global view from
several segment publishers) and HitsAbstract.SegmentGrouper (groups hits
from a segment as they come in).

Care was taken to do as little locking as possible, while also avoiding
unnecessary copying of hits. Hits are reported in batches, which use
a nonlocking Hits implementation. This is okay because it runs in a
single thread. The publisher also keeps track of all hits in a locking
implementation, which is what is used by HitsFromPublisher's global hits
view. Here locking is required because it is used from multiple threads.

This should improve performance when grouping hits from a complex
(and therefore CPU-intensive) query. Before, we would wait for all hits
to be fetched before grouping. Grouping is usually I/O bound because it
requires context or metadata values, so the fetching phase would be
CPU-bound while the grouping phase would be I/O-bound. By having several
threads engage in both fetching AND grouping, we improve resource usage
and get grouping results faster.

Squashed commit of the following:

commit c2531cd55e61932b336bab29ffeb7420401be448
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Mon Sep 22 10:43:15 2025 +0200

    Get rid of disposeContext.

commit 71cbf6f0f993b948e347f5fb25dec664b791dac0
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Fri Sep 19 14:06:53 2025 +0200

    Misc refactorings, comments.

commit 